2010-12-13  Jan Hubicka  <jh@suse.cz>

	PR middle-end/45388
	* decl2.c (start_objects): Do not generate collect2 recognicable name
	for static ctor.

2010-12-12  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/46901
	* typeck.c (convert_for_assignment): Fix typo in warning message.

2010-12-10  Jakub Jelinek  <jakub@redhat.com>

	PR c++/46001
	* decl.c (record_builtin_java_type): Call build_distinct_type_copy
	on build_nonstandard_integer_type result for __java_* types.

2010-12-10  Nathan Froyd  <froydnj@codesourcery.com>

	* decl.c (grokmethod): Test DECL_CLASS_SCOPE_P.
	* error.c (dump_decl): Test DECL_FILE_SCOPE_P.

2010-12-10  Nathan Froyd  <froydnj@codesourcery.com>

	* cp-tree.h (readonly_error_kind): Delete.
	(readonly_error): Rename to...
	(cxx_readonly_error): ...this.  Change second argument to be an
	enum lvalue_use.
	* semantics.c (finish_asm_stmt): Call cxx_readonly_error.
	* typeck.c (cp_build_unary_op): Likewise.
	(cp_build_modify_expr): Likewise.
	* typeck2.c (readonly_error): Rename to...
	(cxx_readonly_error): ...this.  Delegate to readonly_error for
	most cases.

2010-12-10  Nicola Pero  <nicola.pero@meta-innovation.com>

	* parser.c (cp_parser_objc_superclass_or_category): Recognize
	Objective-C 2.0 class extensions.  Added iface_p and
	is_class_extension arguments.
	(cp_parser_objc_class_interface): Updated call to
	cp_parser_objc_superclass_or_category.
	(cp_parser_objc_class_implementation): Same change.

2010-12-09  Nathan Froyd  <froydnj@codesourcery.com>

	* call.c (print_conversion_rejection): Indent messages two spaces.

2010-12-09  Nathan Froyd  <froydnj@codesourcery.com>

	* typeck.c (cp_build_indirect_ref): Call invalid_indirection_error.

2010-12-09  Nathan Froyd  <froydnj@codesourcery.com>

	* typeck.c (composite_pointer_error): New function.
	(composite_pointer_type_r, composite_pointer_type): Call it.

2010-12-08  Jason Merrill  <jason@redhat.com>

	PR c++/46348
	* semantics.c (cxx_eval_vec_init_1): Handle value-init.